fix: alignement icone compte
Fix #297

--- a/assets/css/modules/_header.scss
+++ b/assets/css/modules/_header.scss
@@ -132,6 +132,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.header__account svg {
+  display: block;
+  align-self: center;
+}
 
 .header__notification .icon,
 .header__notification > button {
